--- a/src/config/configDialog.ui
+++ b/src/config/configDialog.ui
@@ -98,6 +98,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="applyButton">
+       <property name="text">
+        <string>Apply</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="cancelButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
